--- a/Java Parallel program/Java并发编程实践/14-自定义同步工具.ipynb
+++ b/Java Parallel program/Java并发编程实践/14-自定义同步工具.ipynb
@@ -4,6 +4,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 一. 依赖状态的类实现\n",
+    "#### 1. 什么叫依赖状态的类\n",
+    "* 如果类中的一些操作有基于状态的前提. 则这个类是依赖状态的\n",
+    "* 类库中包含许多依赖状态的同步类, 比如FutureTask, Semaphore, BlockingQueue等.  \n",
+    "  例如不能从一个控队类中删除元素, 或者不能获取一个尚未结束的任务的计算结果\n",
+    "  \n",
+    "#### 2. 多线程下状态依赖 - 等待条件变为真\n",
+    "* 单线程程序中, 条件分支依赖于某个状态, 如果这个条件不满足, 可以立刻失败, 因为该状态不会发生改变  \n",
+    "* 多线程程序中, 基于状态的条件可能会被其他线程修改, 所以不能立刻进入失败分支, 而是可以**等待条件变为真**\n",
+    "\n",
+    "#### 3. 如何进行高效的条件等待\n",
+    "为了突出高效的条件等待方法 ,先来介绍一些低效的条件等待方法. 如下方法效率依次增高, 直到最后一种方法效率为最高:  \n",
+    "一个统一的场景, `有界队列实现`:   \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;有界队列的put和take往往包含一个前提条件,不能从空队列中获取元素, 也不能将元素放入已满的队列之中. 当条件不满足时, 可以阻塞直到对象进入正确的状态, 或抛出异常或返回一个错误状态. 如下是所有有界队列实现的父类, 定义了公用的`isFull()`和`isEmpty()`\n",
+    "```java\n",
+    "abstract class BaseBoundedQueue<V> {\n",
+    "    /**\n",
+    "     * 所有有界队列的父类, 子类来实现不同的状态依赖take(),put()方法\n",
+    "     */\n",
+    "    private final V[] buf;\n",
+    "    private int count;\n",
+    "    private int head;\n",
+    "    private int tail;\n",
+    "\n",
+    "    BaseBoundedQueue(int capacity) {\n",
+    "        this.buf = (V[]) new Object[capacity];\n",
+    "    }\n",
+    "\n",
+    "    protected synchronized final boolean isFull() {\n",
+    "        /** 判断队列是否空, 该方法因为和count状态有关, 因此需要对象的内置锁进行保护; 且该方法不允许子类覆盖*/\n",
+    "        return count == buf.length;\n",
+    "    }\n",
+    "\n",
+    "    protected synchronized final boolean isEmpty() {\n",
+    "        return count == 0;\n",
+    "    }\n",
+    "\n",
+    "    protected synchronized final void doPut(V v) {\n",
+    "        buf[tail++] = v;\n",
+    "        if (tail == buf.length)\n",
+    "            tail = 0;\n",
+    "        count++;\n",
+    "    }\n",
+    "\n",
+    "    protected synchronized final V doTake() {\n",
+    "        V v = buf[head];\n",
+    "        buf[head++] = null;\n",
+    "        if (head == buf.length)\n",
+    "            head = 0;\n",
+    "        count--;\n",
+    "        return v;\n",
+    "    }\n",
+    "\n",
+    "    protected abstract V take();\n",
+    "\n",
+    "    protected abstract void put(V v);\n",
+    "}\n",
+    "\n",
+    "\n",
+    "```\n",
+    "1. 方法一 : **将条件检测的失败状态传递给调用者(抛异常或返回一个错误值)**   \n",
+    "   该方法下, 如果条件依赖检查失败, 直接在方法中抛异常通知调用者. 这看起来实现简单, 但使用起来有2个问题\n",
+    "    1. 依赖不满足只是当下不满足, 而不是发生了异常\n",
+    "    2. 调用者每次调用必须做好捕获异常的准备, 且在异常发生时主动重试\n",
+    "  ```java\n",
+    "    class GrumpyBoundedQueue<V> extends BaseBoundedQueue<V>{\n",
+    "        public GrumpyBoundedQueue(int capacity) {\n",
+    "            /** 构造器 */\n",
+    "            super(capacity);\n",
+    "        }\n",
+    "\n",
+    "        @Override\n",
+    "        public synchronized V take() {\n",
+    "            /** 检查队列空, 则抛出异常 */\n",
+    "            if(isEmpty())\n",
+    "                throw new RuntimeException(\"empty queue\");\n",
+    "            return doTake();\n",
+    "        }\n",
+    "\n",
+    "        @Override\n",
+    "        public synchronized void put(V v) {\n",
+    "            /** 检查队列满, 抛出异常 */\n",
+    "            if(isFull())\n",
+    "                throw new RuntimeException(\"full queue\");\n",
+    "            doPut(v);\n",
+    "        }\n",
+    "    }\n",
+    "  ```\n",
+    "    3. 客户调用者捕获异常后, 可以有两种重试选择 :   \n",
+    "        * 自行进入休眠   \n",
+    "        catch块中进行`Thread.sleep()`\n",
+    "        ```java\n",
+    "        while(true){\n",
+    "            try{\n",
+    "               V item = buffer.get();\n",
+    "               break;  // 未发生异常跳出循环\n",
+    "            }catch (Exception e){\n",
+    "               Thread.sleep(SLEEP_GRANULARITY)  // 自行休眠\n",
+    "            }\n",
+    "        }\n",
+    "        ```\n",
+    "        * 自旋等待(忙等待)  \n",
+    "        catch中调用`Thread.yield()`, 当调度器给该线程一个时间片时, yield选择让出处理器而不是消耗完整个CPU时间片\n",
+    "        ```java\n",
+    "        while(true){\n",
+    "            try{\n",
+    "               V item = buffer.get();\n",
+    "               break;  // 未发生异常跳出循环\n",
+    "            }catch (Exception e){\n",
+    "               Thread.yield();  // 自旋等待\n",
+    "            }\n",
+    "        }\n",
+    "        ```\n",
+    "* 方法二: **通过轮训和休眠的方式, 勉强的解决状态依赖问题**  \n",
+    "    1. 该方法也是先进行条件检查, 然后执行方法; 但会在检查失败后自行重试      \n",
+    "       首先, 状态条件的检查必须在锁的保护下进行.     \n",
+    "       其次, 如果测试失败, 当前执行的线程应该释放锁并休眠一段时间, 让其他线程能够访问内部的buf; 当线程醒来后, 将重新请求锁并再次进行重试. 因而, 线程将反复的在条件检查,休眠,获取锁释放锁的等待过程中切换.     \n",
+    "    2. 该方法实际将跑出异常那个方法中, 调用者的重试逻辑放到了方法内部进行; 使方法内部处理重试逻辑, 客户端只负责简单调用.\n",
+    "    ```java\n",
+    "    class SleepBoundedQueue<V> extends BaseBoundedQueue<V>{\n",
+    "        private static int SLEEP_TIME=1000;\n",
+    "        public SleepBoundedQueue(int capacity) {\n",
+    "            /** 构造器 */\n",
+    "            super(capacity);\n",
+    "        }\n",
+    "\n",
+    "        @Override\n",
+    "        public V take() throws InterruptedException {\n",
+    "            /** 获取锁检查条件, 若队列空, 释放锁睡眠一段时间 */\n",
+    "            while(true){\n",
+    "                // 条件检查必须在持有锁的情况下进行\n",
+    "                synchronized (this){\n",
+    "                    if(!isEmpty())\n",
+    "                        return doTake();\n",
+    "                }\n",
+    "                Thread.sleep(SLEEP_TIME);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        @Override\n",
+    "        public void put(V v) throws InterruptedException {\n",
+    "            /** 获取锁检查条件, 若队列满, 释放锁睡眠一段时间 */\n",
+    "            while(true){\n",
+    "                synchronized (this){\n",
+    "                    if(!isFull())\n",
+    "                        doPut(v);\n",
+    "                }\n",
+    "                Thread.sleep(SLEEP_TIME);\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    ```\n",
+    "    3. 睡眠时间间隔选择   \n",
+    "       要选择合适的睡眠时间, 需要在响应性和CPU使用率之间权衡. 睡眠时间小, 响应性就高, 但消耗的CPU资源也高   \n",
+    "    4. 展望  \n",
+    "       这种通过轮训和睡眠实现阻塞的过程需要进行巨大努力. 如果存在某种挂起线程的方法, 能够保证当依赖条件为真时才立即醒来, 则将极大地提高效率, 这正是条件队列实现的功能.  \n",
+    "       \n",
+    "* 方法三: **使用条件队列**\n",
+    "    1. 条件队列:    \n",
+    "       条件队列的名字来源于: 使\"等待某个条件为真\"的线程加入到一个队列中.   \n",
+    "       一般队列中每个元素都是数据, 而条件队列中每个元素是一个线程\n",
+    "    2. 一个对象就是一个条件队列   \n",
+    "        * 正如每个对象都可以是一个锁一样, 每个对象也可以作为一个条件队列; 对象的wait(), notify()构成了使用内部条件队列的API   \n",
+    "        * 对象的内置锁和内置条件队列是相互关联的, 要调用对象X内置条件队列的任意一个方法, 必须先持有对象X的内置锁. 这也是因为 \"等待由状态构成的条件\" 和 \"维护状态的一致性\" 两种机制必须紧密地绑定在一起\n",
+    "        * wait():   \n",
+    "            1. 会释放锁, 并请求操作系统挂起当前线程. 使其他线程能够获取这个锁并修改对象的状态.   \n",
+    "            2. wait()醒来时, 将在返回之前重新获取锁.   \n",
+    "            3. wait()通常写在while循环内部. 由于代码可能出现bug, 线程不一定是在条件满足后醒来, 还可能在条件处于任意状态下被错误唤醒, 因此线程醒来后需要重新判断依赖条件是否为true  \n",
+    "        * 使用条件队列完成条件状态依赖, 和轮训休眠拥有相同的语义. 如果某个功能使用 \"轮训和休眠\" 无法完成, 那么使用条件队列也无法完成;    \n",
+    "        ```java\n",
+    "        class BoundedQueue<V> extends BaseBoundedQueue<V>{\n",
+    "\n",
+    "            // 条件谓词: not-full (!isFull())\n",
+    "            // 条件谓词: not-empty (!isEmpty())\n",
+    "\n",
+    "            public BoundedQueue(int capacity) {\n",
+    "                /** 构造器 */\n",
+    "                super(capacity);\n",
+    "            }\n",
+    "\n",
+    "            @Override\n",
+    "            public synchronized V take() throws InterruptedException {\n",
+    "                /** 阻塞直到not-empty, this对象即是锁, 又是条件队列 */\n",
+    "                while(isEmpty()){\n",
+    "                    wait();\n",
+    "                }\n",
+    "                V v = doTake();\n",
+    "                notifyAll();\n",
+    "                return v;\n",
+    "            }\n",
+    "\n",
+    "            @Override\n",
+    "            public synchronized void put(V v) throws InterruptedException {\n",
+    "                /** 阻塞直到not-full, this对象即是锁, 又是条件队列 */\n",
+    "                while(isFull()){\n",
+    "                    wait();\n",
+    "                }\n",
+    "                doPut(v);\n",
+    "                notifyAll();\n",
+    "            }\n",
+    "        }\n",
+    "        ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 二. 使用条件队列  \n",
+    "\n",
+    "#### 1. 条件谓词\n",
+    "\n",
+    "\n",
+    "#### 2. 过早唤醒\n",
+    "\n",
+    "\n",
+    "#### 3. 丢失的信号\n",
+    "\n",
+    "#### 4. 通知\n",
+    "\n",
+    "\n",
+    "#### 5. 示例: 条件队列实现阀门类\n",
+    "\n",
+    "#### 6. 子类的安全问题\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. `boolean tryAcquire(int arg)`\n",
     "2. `boolean tryRelease(int arg)`\n",
     "\n",
@@ -26,7 +257,7 @@
    "source": [
     "### 三. 几个问题: \n",
     "#### 1. FutureTask如何实现阻塞版的get(), 等待任务完毕才能返回\n",
-    "1. java1.8中实现的FutureTask使用LockSupport实现任务的等待  \n",
+    "1. java1.8中实现的FutureTask使用LockSupport实现任务的等待??  \n",
     "    * (1) LockSupport中定义了线程阻塞,唤醒的方法; 定义了获取线程阻塞在哪个object上等方法\n",
     "    * (2) `Unsafe`类的作用:\n",
     "        1. 阻塞或唤醒线程 : \n",
@@ -45,8 +276,8 @@
     "     ARRAY_LONG_INDEX_SCALE = theUnsafe.arrayIndexScale(long[].class);\n",
     "     ```\n",
     "     \n",
-    "2. FutureTask阻塞版get()的实现\n",
-    "    1. FutureTask对任务的状态做了定义, 每个状态都是一个volatile的int值\n",
+    "2. FutureTask阻塞版get()的实现        \n",
+    "    1. FutureTask对任务的状态做了定义, 每个状态都是一个volatile的int值.    \n",
     "       <img src=\"img/futuretask1.png\" width=\"40%\">\n",
     "    2. 再来看一下FutureTask内部的一些属性:\n",
     "        ```java\n",
@@ -95,7 +326,7 @@
     "       ```\n",
     "    2. get()方法首先判断当前任务的任务的状态:  \n",
     "        * 如果还未运行完(<=Compiled), 则自旋等待任务运行完(awaitDone): 否则返回运行结果\n",
-    "            1. 在等待栈中加入一个新的等待节点WorkNode\n",
+    "            1. 在FutureTask结果的等待栈中加入一个新的节点WaitNode\n",
     "            ```java\n",
     "            static final class WaitNode {\n",
     "                volatile Thread thread;\n",
@@ -103,7 +334,7 @@
     "                WaitNode() { thread = Thread.currentThread(); }\n",
     "            }\n",
     "            ```\n",
-    "            2. 如果任务状态是COMPLETING, 表示还未运行完, 进入自选等待(while(true){Thread.yield})\n",
+    "            2. 如果任务状态是COMPLETING, 表示还未运行完, 进入自旋等待(while(true){Thread.yield})\n",
     "            ```java\n",
     "            private int awaitDone(boolean timed, long nanos) throws InterruptedException {\n",
     "                final long deadline = timed ? System.nanoTime() + nanos : 0L;  // 如果是有闲时间等待的话计算deadline\n",
@@ -147,6 +378,13 @@
     "        while(Thread.currentThread().isInterrupted() && ! flag)\n",
     "        ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
