--- a/GC/oracle - Java GC方法论.ipynb
+++ b/GC/oracle - Java GC方法论.ipynb
@@ -113,7 +113,10 @@
     "    * 青年代:\n",
     "        * 新对象再次产生, 青年代的gc称为'minor gc' 青年带上的对象有很高的死亡率. 所有在minor gc后幸存的对象都会增长一个age, 直到最终进入老年代.   \n",
     "        * 充满死亡对象的青年代, 在进行gc时通常会很快\n",
-    "        * 所有的'minor gc'都是'stop the world'事件\n",
+    "        * 所有的'minor gc'都是'stop the world'事件   \n",
+    "           因为如果gc的过程还有新对象产生在内存里, 这些新对象很快又有大部分变为\"无引用\"对象, 导致gc混乱. minor gc耗时多长时间, 系统就停止运行多长时间  \n",
+    "        * 为什么青年带要分区?(eden,s0,s1)   \n",
+    "           新生代分区是因为青年带的收集策略一般选择\"复制清除\", 基于\"复制\"的清除算法可以避免内存中产生大量空隙, 而且因为青年带90%的对象都会死亡, 复制的开销并不会很大\n",
     "    * 老年代  \n",
     "        * 老年代存储长期存活的对象. 一般来讲, 会给青年代中的对象设置一个阈值, 当对象的age到达阈值时, 该对象就会从青年代移动到老年代  \n",
     "        * 最终, 老年代的对象也会被gc掉. 考年代的gc称作'major gc'\n",
@@ -172,45 +175,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 六.  高性能gc器 - 替换默认的serial gc器\n",
-    "* Parallel GC\n",
-    "    * Parallel GC是多线程的年轻带收集器. 一个n核心的主机上默认使用n个线程进行gc  \n",
-    "      gc线程数控制: `-XX:ParallelGCThreads=<desired number>`\n",
-    "    * 2核心以上的主机使用parallel gc才能有更好的结果\n",
-    "    * 使用场景:  \n",
-    "      Parallel collector也叫做高吞吐收集器, 适用于收集大内存并且允许暂停时间稍长的应用. 如批处理任务,数据库query等\n",
-    "    * `-XX:+UseParallelGC`  \n",
-    "      该参数在青年带上使用多线程收集器, 在老年代上使用单线程收集器\n",
-    "    * `-XX:+UseParallelOldGC`  \n",
-    "      该参数在年轻带和年老带都使用多线程收集器,且在年老带使用压缩(compact)   \n",
-    "      HotSpot虚拟机仅仅在年老带使用压缩清除(compact), 在年轻带使用复制清除(copy), 因此年轻带不需要压缩"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* CMS GC  \n",
-    "    * CMS收集器, 全称\"Concurrent Mark Sweep (CMS) Collector\", 是一种运行在老年代的低暂停,高响应收集器. 通过让垃圾收集线程和应用线程并行的方式最小化暂停时间\n",
-    "    * 这种并发的高响应收集器, 不会把已存在的对象进行copy或compact, 因此会在内存中留下缝隙, 如果这种方式是一个问题的话就要分配更大的老年代  \n",
-    "    * CMS算法在年轻带使用和Parallel GC相同的收集算法  \n",
-    "    * CMS高响应收集器可用在桌面UI,WebSite, 数据库查询响应等场景  \n",
-    "    * 使用CMS: `-XX:+UseConcMarkSweepGC`  \n",
-    "      指定收集线程个数: `-XX:ParallelCMSThreads=<n>`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* G1收集器\n",
-    "    * 在java1.7中被设计出来, 旨在替代CMS收集器, 他同样是高响应,多线程,与应用并行的收集器"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 七. 默认收集器  \n",
     "* `java -XX:+PrintCommandLineFlags -version ` : 查看当前gc是哪种\n",
     "* Default garbage collectors:\n",
@@ -238,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
