--- a/GC/深入理解Java虚拟机/3-GC收集器与内存分配策略.ipynb
+++ b/GC/深入理解Java虚拟机/3-GC收集器与内存分配策略.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "GCRoots\n",
+    "\n",
+    "一句话, 只要对象被`方法的局部变量`，`类的静态变量`引用，就不会回收他们\n",
+    "\n",
+    "* 强引用\n",
+    "* 软引用\n",
+    "   \n",
+    "* 弱引用\n",
+    "\n",
+    "* 虚引用\n",
+    "\n",
+    "常用的是强引用和软引用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### G1收集器\n",
     "1. G1的特点\n",
     "    1. 划分Region :   \n",
@@ -83,17 +101,17 @@
     "2. 当Survivor对象中大于一半的对象有相同的age时, 大于等于该age的对象直接进入老年代\n",
     "\n",
     "#### 4. 老年代的空间担保, 担保失败会进入full gc\n",
-    "除了老年代gc会导致进入full gc外, 青年代对象的产生也可能导致full gc的产生. 这是因为minor gc需要老年代提供担保:   \n",
-    "1. 何时担保?  \n",
-    "当发生minor gc时, 如果发现survivor无法容纳对象继续进入, 则这些对象会直接进入老年代, 而进入成功的前提是老年代的剩余空间大于这些对象的总和, 因此需要老年代在此时做出担保 \n",
-    "\n",
-    "\n",
-    "2. 老年代需要担保多少空间?  \n",
-    "因为Survivor并不知道一共有多少对象无法容纳, 因此只好取每次晋升到老年代对象容量的平均值作为一个经验值.   \n",
-    "    * 如果老年代剩余空间 > 平均值, 担保成功\n",
-    "    * 反之, 担保失败, 担保失败会触发full gc  \n",
+    "每次minorGC之前, 先检查老年代剩余空间是否大于新生代所有对象之和(eden+某个survivor区)\n",
+    "1. 是(老年代剩余空间>新生代所有对象之和):  \n",
+    "进行一次minorGC, 此时, survivor中存不下的对象会进入老年代   \n",
+    "2. 否(老年代剩余空间<新生代所有对象之和):   \n",
+    "此时可能发生一个问题, 如果新生代的对象在gc后全部进入老年代, 那老年代的空间不是不够了吗? 所以此时会检查一个参数`-XX:-HandlePromotionFailure`是否开启(大多数情况会加上这个参数)?\n",
+    "    1. 开启了: 此时老年代剩余空间和\"历次gc进入老年代的对象的平均大小\"作对比\n",
+    "        1. \"老年代剩余空间\" > \"历次gc进入老年代的对象的平均大小\" : 进行minorGC\n",
+    "        2. \"老年代剩余空间\" < \"历次gc进入老年代的对象的平均大小\" : 先进行full gc(老年代和青年代都gc)\n",
+    "    2. 未开启: 进行一次full gc(老年代和青年代都gc)\n",
     "    \n",
-    " JDK6U24后, 默认只要`老年代剩余最大连续空间`大于`新生代对象总大小`or`每次晋升到老年代的平均大小`则担保成功, 进行minorgc, 否则进行full gc\n"
+    "上述过程产生的full gc后, 如果仍然有新生代的对象存不下, 则系统OOM"
    ]
   }
  ],
@@ -113,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
