--- a/Interview/2-分布式缓存(redis).ipynb
+++ b/Interview/2-分布式缓存(redis).ipynb
@@ -87,7 +87,7 @@
     "       min-slaves-to-write : 从节点小于多少个，主节点就不写了\n",
     "       min-slaves-max-lag  : 从节点大于多少秒延迟，就不写了\n",
     "\n",
-    "#### 4. 底层原理\n",
+    "#### 4. (Sentinal)底层原理 ？？\n",
     "\n"
    ]
   },
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
