--- a/GC/线上问题debug的一般步骤.ipynb
+++ b/GC/线上问题debug的一般步骤.ipynb
@@ -62,6 +62,37 @@
     "* -P : 按照cpu使用排序\n",
     "* -M : 按照内存使用排序"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. CPU消耗分析\n",
+    "1. cpu主要用于中断, 内核进程, 用户进程的任务处理\n",
+    "2. cpu利用率\n",
+    "    * cpu利用率是cpu在用户进程, 内核进程, 中断处理, IO等待,空闲状态着5个人部分的使用百分比\n",
+    "    * linux建议用户进程的cpu消耗和内核进程的cpu消耗比率在(65%~70%)和(30%~35%)左右\n",
+    "    * `top`和`pidstat`用来查看cpu的消耗状况\n",
+    "        1. `top`  \n",
+    "          top命令的第三行表示CPU消耗\n",
+    "          * us : 用户进程所占百分比; 此部分过高, 说明某个java线程占用负载过高, 或频繁发生gc  \n",
+    "          * sy : 内核进程所占百分比; 此部分过高, \n",
+    "          * ni : 使用nice命令改变优先级的任务所占百分比\n",
+    "          * id : cpu空闲时间所占百分比\n",
+    "          * wa : 等待IO所占百分比\n",
+    "          * hi : 硬件中断所占百分比\n",
+    "          * si : 软件中断所占百分比\n",
+    "          <img src=\"img/top1.png\">\n",
+    "        2. `pidstat`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
