--- a/Interview/2-分布式缓存(redis).ipynb
+++ b/Interview/2-分布式缓存(redis).ipynb
@@ -61,9 +61,14 @@
     "    1. 单节点的redis, qps一般在1万左右, 想承载10万qps.必须上redis的读写分离模式  \n",
     "    2. qps是每秒处理的查询数量, 就表示这是一个读多写少的场景, 也正是缓存应用的场景; 如果是写多读少, 就无法使用分布式缓存了, 需要使用一些列复杂的异步消息队列实现. \n",
     "    3. redis的读写分离是这样的, 使用单个master节点负责写, master会向slave节点异步同步数据,其余slave节点负责读; 这种架构的好处在于, 对于处理读请求的slave节点可以水平扩容来满足qps; \n",
-    "    <img src=\"img/redis1.png\" width=\"60%\">\n",
+    "<img src=\"img/redis1.png\" width=\"60%\">\n",
+    "\n",
     "**redis的各种架构演练**    \n",
     "`redis replication` -> `redis 主从架构` -> `redis 读写分离架构` -> `水平扩容支持高并发`  \n",
+    "**总结: redis如何实现高并发**  \n",
+    "1. 可以使用redis的主从架构: 一主多从. 主负责写请求, 从负责并发的读请求; 这种架构可以实现十万的qps; 通过部署哨兵, 可以实现故障的自动转移  \n",
+    "2. 如果要在实现高并发的同时还要实现大数据量, 就要上redis的集群模式(后面讲解).  \n",
+    "   因为主从架构下的redis, 每个节地那都是全量的数据, 如果主有10g内存, 那么整个缓存只能缓存10g的数据\n",
     "\n",
     "#### 2. redis replication:  \n",
     "    1. redis master节点采用异步方式向slave节点复制数据; 不过从redis2.0开始, slave节点也会定期向master确认自己的数据复制量  \n",
@@ -87,16 +92,43 @@
     "       min-slaves-to-write : 从节点小于多少个，主节点就不写了\n",
     "       min-slaves-max-lag  : 从节点大于多少秒延迟，就不写了\n",
     "\n",
-    "#### 4. (Sentinal)底层原理 ？？\n",
-    "\n"
+    "#### 4. (Sentinal)底层原理 (23-9)？？\n",
+    "\n",
+    "#### 5. redis持久化的意义\n",
+    "持久化的意义在于故障恢复. 如果不进行持久化, 一旦redis集群宕机, 重启后导致缓存内没有任何数据, 所有请求直接到后端mysql, 而mysql的并发支撑很小, 导致mysql马上宕机, 系统瘫痪  \n",
+    "\n",
+    "#### 6. redis的2种持久化机制\n",
+    "* RDB : 每隔一段时间, 产生一个内存中的数据快照\n",
+    "* AOF(append only file) : 记录每条\"写命令\"到os cache中, 每个1秒触发fsync()将os cache中的数据写入到磁盘的文件, 当aof文件膨胀到达一定大小时, 会触发rewrite机制, 基于当前内存中的数据, 产生一个新的小一点的aof文件\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 数据分布算法\n"
+    "### 七. redis-cluster模式  \n",
+    "突破单机瓶颈, 让redis支持1T的数据量\n",
+    "#### 1. 思路: 横向扩展master节点  \n",
+    "* 还是基于1master多slave的架构, 但是部署多组1maser多slave, 通过让数据部署到多个master实现更大数据量的支撑\n",
+    "* redis-cluster模式 \n",
+    "    * 多master+读写分离+高可用\n",
+    "    * redis-cluster vs (replication(1主多从)+sentinal): 数据量小选择后者, 大选择前者\n",
+    "    \n",
+    "#### 2. 如何将数据分布到多master\n",
+    "[数据分布算法](../Distributed%20System/4-分布式缓存下的数据分布算法.ipynb): 经历了hash -> 一致性hash -> Redis的hash slot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -115,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
