--- a/Interview/6.Mysql.ipynb
+++ b/Interview/6.Mysql.ipynb
@@ -45,6 +45,7 @@
     "    1. 对非常小的表，大部分情况下全表扫描效率更高。\n",
     "    2. 对中大型表，索引非常有效。\n",
     "    3. 特大型的表，建立和使用索引的代价不断增长; 此时可以选择\"分库分表\"\n",
+    "      \n",
     "* **索引的类型？** \n",
     "    1. 普通索引：最基本的索引，没有任何约束。\n",
     "    2. 唯一索引：与普通索引类似，但具有唯一性约束。\n",
@@ -56,7 +57,7 @@
     "    在一般情况下，模糊查询都是通过 like 的方式进行查询。但是，对于海量数据，这并不是一个好办法，在 like “value%” 可以使用索引，但是对于 like “%value%” 这样的方式，执行全表查询，这在数据量小的表，不存在性能问题，但是对于海量数据，全表扫描是非常可怕的事情,所以 like 进行模糊匹配性能很差。常用的全文索引引擎的解决方案有 Elasticsearch、Solr 等等。最为常用的是 Elasticsearch 。\n",
     "\n",
     "    ```\n",
-    "    \n",
+    "     \n",
     "* **索引的“创建”原则有哪些** \n",
     "    1. 最适合索引的列是出现在 WHERE 子句中的列，或连接子句中的列，而不是出现在 SELECT 关键字后的列。\n",
     "    2. 索引列的基数越大(索引字段取不同值的个数越大)，索引效果越好。\n",
@@ -107,7 +108,7 @@
     "    8. 列类型是字符串类型，查询时一定要给值加引号，否则索引失效。\n",
     "    9. LIKE 查询可能会引起索引失效:    \n",
     "       like 的方式进行查询，在 like “value%” 可以使用索引，但是对于 like “%value%” 这样的方式，执行全表查询。如果需要模糊匹配，可以使用全文索引。\n",
-    "       \n",
+    "         \n",
     "* **以下三条 SQL 如何建索引，只建一条怎么建？**\n",
     "```sql\n",
     "WHERE a = 1 AND b = 1\n",
@@ -115,6 +116,7 @@
     "WHERE b = 1 ORDER BY time DESC\n",
     "```\n",
     "按照复合索引的最左前缀原则, 以顺序 b , a, time 建立复合索引，`CREATE INDEX table1_b_a_time ON index_test01(b, a, time)。`对于第一条 SQL ，因为最新 MySQL 版本会优化 WHERE 子句后面的列顺序，以匹配复合索引顺序。\n",
+    "\n",
     "* **一个查询用到了哪个索引，如何查看?**   \n",
     "`EXPLAIN` 显示了 MYSQL 如何使用索引来处理 `SELECT` 语句以及连接表,可以帮助选择更好的索引和写出更优化的查询语句。  \n",
     "使用方法，在 SELECT 语句前加上 EXPLAIN 就可以了。"
@@ -124,7 +126,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. 【重点】MySQL 索引的原理？\n"
+    "### 7. 【重点】MySQL 索引的原理？\n",
+    "* **innoDB使用B+树作为索引存储的数据结构**\n",
+    "    1. innodb中, 有`页`的概念, 默认页的大小设置为16kb, 表示磁盘和内存IO时一次的交换大小. 由于B+树数据结构中, 处于外存的每个文件就是B+树的一个节点, 因此, Innodb一个索引节点最大有16kb,按照INT栈4字节, 指针类型占4字节计算, 可以存放(16kb/4B+4B)=1000个索引. 因此如果把inodb的索引看成1000阶的B+树, 则3层的B+树就可对$10^3 * 10^3 * 10^3=10亿$条记录做索引\n",
+    "    2. innoDB索引的`根节点会常驻内存`, 只有在切换节点或修改节点时才发生磁盘IO, 且由于innodb索引是高阶B+树, 因此, IO次数一般3次左右\n",
+    "    3. 对于一般的B+树, 只有叶子结点才存储真正的索引, 其它节点只是存储的key序列, innodB的索引文件也一样, 只有叶子结点才记录着被索引的row在磁盘什么位置. 但与一般B+树不同的是, 一般B+树只会把叶子结点从左到右串成一个链表来应付顺序查找, 而innodb将所有节点串成环形链表, 且维护2个指针:一个指向根节点,一个指向key最小的叶子结点; 以此来应付对于主键的`范围查找和分页查找`\n",
+    "     \n",
+    "* **有哪些索引类型: 聚簇索引和非聚簇索引**   \n",
+    "索引分为聚簇索引主键索引和非主键索引, 聚簇索引的叶子结点<key,value>是<主键值, row的数据>; 非聚簇索引的叶子结点<key.value>是<非主键列的值, 主键值>; 非聚簇索引是聚簇索引的二级索引;\n",
+    "    1. 聚簇索引和非聚簇索引   \n",
+    "        1. 在《数据库原理》一书中说, 聚簇索引的叶子结点就是数据节点; 非聚簇索引的叶子结点仍然是索引节点, 只不过有能指向数据的指针.  \n",
+    "        2. innoDB中, 用聚簇索引对主键做索引, 用非聚簇索引索引做非主键列的索引;   \n",
+    "           非主键列的索引其叶子结点存储着其对应行的主键值. 在非主键列上查找时, 先通过非聚簇索引找到属于自己的主键值, 然后用这个主键值在聚簇索引中查找row的数据. 因此, 可以说非聚簇索引是聚簇索引的二级索引. 之所以非聚簇索引存储的是主键值而不是指向数据行的行指针, 是为了避免当数据移动时维护B+树的结构需要同时修改锁哥索引文件, 有了这种设计, 值修改主键索引(聚簇索引)的row index即可\n",
+    "    2. 没设置主键的情况下, innoDB如何安排聚簇索引  \n",
+    "      如果没设置主键, innoDB会隐式的将唯一且非空的列作为主键, 如果没有这样的列, 生成一个隐藏列作为主键\n",
+    "   \n",
+    "* **聚簇索引有什么应该注意的地方**  \n",
+    "  聚簇索引最大限度的提高了IO密集型应用的性能, 但也有如下几个限制  \n",
+    "    1. 聚簇索引的插入速度严重依赖于插入顺序  \n",
+    "       顺序插入是最快的插入方式, 因为创建B+树的节点时. 顺序插入的索引都会处于一个页中, 非顺序插入可能会插入到不同页, 增大了IO次数. 这也是**为什么会定义一个与业务无关的自增主键作为聚簇索引**的原因  \n",
+    "    2. 主键一般要定义为不可更新  \n",
+    "       因为更新主键, 可能会导致其所在行移动, 行指针变化, 所以我们一般定义主键为不可更新。\n",
+    "    3. 二级索引(非聚簇索引)访问需要两次索引查找，第一次找到主键值，第二次根据主键值(聚簇索引)找到行数据。\n",
+    "    4. 主键 ID 建议使用整型。  \n",
+    "       因为，每个主键索引的 B+Tree 节点的键值可以存储更多主键 ID ，每个非主键索引的 B+Tree 节点的数据可以存储更多主键 ID 。\n",
+    "  \n",
+    "* **什么是最左匹配原则**   \n",
+    "使用复合索引时, B+树中的key也是符合项, 比如索引`(name, age, sex)` 的时候，B+Tree 是按照从左到右的顺序来建立搜索树的。先用待查记录的name比较, 找到name相同的索引后再比较age, 最后比较sex. 如果查询语句中的条件只有(age,sex), 则因为缺少最左面的name条件, 导致索引全部不可用. 这就是最左匹配原则  \n",
+    "    * 比如当 (张三, 20, F) 这样的数据来检索的时候，B+Tree 会优先比较 name 来确定下一步的所搜方向，如果 name 相同再依次比较 age 和 sex ，最后得到检索的数据。\n",
+    "    * 但当 (20, F) 这样的没有 name 的数据来的时候，B+Tree 就不知道下一步该查哪个节点，因为建立搜索树的时候 name 就是第一个比较因子，必须要先根据 name 来搜索才能知道下一步去哪里查询。\n",
+    "    * 比如当 (张三, F) 这样的数据来检索时，B+Tree 可以用 name 来指定搜索方向，但下一个字段 age 的缺失，所以只能把名字等于张三的数据都找到，然后再匹配性别是 F 的数据了。"
    ]
   },
   {
