--- a/Interview/2-分布式缓存(redis).ipynb
+++ b/Interview/2-分布式缓存(redis).ipynb
@@ -115,20 +115,88 @@
     "    * redis-cluster vs (replication(1主多从)+sentinal): 数据量小选择后者, 大选择前者\n",
     "    \n",
     "#### 2. 如何将数据分布到多master\n",
-    "[数据分布算法](../Distributed%20System/4-分布式缓存下的数据分布算法.ipynb): 经历了hash -> 一致性hash -> Redis的hash slot"
+    "[数据分布算法](../Distributed%20System/4-分布式缓存下的数据分布算法.ipynb): 经历了hash -> 一致性hash -> Redis的hash slot\n",
+    "\n",
+    "#### 3. redis-cluster模式下的元数据维护(gossip协议)\n",
+    "集群模式下有多个master节点, 这些master节点要有相同的元数据进行管理. 元数据用来描述: \n",
+    "* master -> slot之间的映射\n",
+    "* master -> slave之间的映射\n",
+    "\n",
+    "gossip协议是指, 元数据在每个master节点上都存在, 如果某个节点需要修改元数据, 该节点将修改后的元数据同步给其它节点. \n",
+    "与gossip协议对应的是`集中式`元数据管理, 一般使用zookeeper来做集中式元数据管理.\n",
+    "* gossip的优势在于, 元数据的更新会分散到每个master节点, 相比集中式管理下的压力更小; \n",
+    "* 缺点是元数据的同步存在延迟, 可能会导致一段时间的集群不可用  \n",
+    "```\n",
+    "比如刚刚做完reshard后, 再做其他操作, 汇报configuration error, 表示元数据还未达成一致\n",
+    "```\n",
+    "\n",
+    "\n",
+    "gossip协议有几种消息:\n",
+    "* meet\n",
+    "* ping\n",
+    "* pong\n",
+    "* ..\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 八. [重要]  缓存雪崩和缓存穿透问题\n",
+    "\n",
+    "#### 1.  缓存雪崩的解决方法\n",
+    "缓存雪崩的意思是: 一般通常使用架构为`接口 -> 查缓存 -> 未命中的查数据库`; 由于缓存宕机, 所有请求达到数据库, 导致数据库崩溃, 系统瘫痪\n",
+    "\n",
+    "如何解决缓存雪崩?  \n",
+    "* 事前 : redis要采用高可用架构: redis-cluster模式或\n",
+    "* 事中 : \n",
+    "    1. 不要只把数据缓存到redis, 可以把数据再缓存程序的内存缓存中, 比如使用ehcache;   \n",
+    "    2. 其次加入降级框架: 限制只有1000个请求可以走数据库, 其它请求返回错误码. 这样顶多是用户点击多次之后才出现结果, 不至于整个请求达到数据库后使服务瘫痪\n",
+    "* 事后 : redis开启持久化机制, 便于故障恢复\n",
+    "\n",
+    "\n",
+    "#### 2. 缓存穿透的解决办法\n",
+    "1. 什么是缓存穿透  \n",
+    "   5000个请求中有4000个是黑客攻击, 缓存和数据库中都没有, 这会导致每秒都有4000个请求达到数据库中, 是数据库无法处理正常查询;  \n",
+    "2. 如何解决缓存穿透  \n",
+    "   解决这个问题的办法是, 当数据库查询返回空时, 把空设置为一个查询结果值(eg:UNKNOWN), 并将<key,UNKONWN>放入缓存中, 下次再请求这个空值时, 可以直接返回结果  "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 九. Cache Aside Pattern(缓存+数据库读写)的一些问题?\n",
+    "\n",
+    "#### 1. 说说缓存+数据库读写架构下, 读流程和写流程?\n",
+    "* 读: 先读缓存, 缓存未命中则从数据库中读, 并将结果写入到缓存中, 最后返回响应\n",
+    "* 更新: 先删除缓存, 再更新数据库\n",
+    "\n",
+    "#### 2. 为什么更新数据时, 只是从缓存中删除数据, 而不是直接更新缓存中的数据?\n",
+    "主要有3个原因:\n",
+    "1. **复杂计算**: 很多时候, 缓存中的数据并不是简简单单的数据库中指的拷贝, 而是多个字段计算的结果. 对某个字段值得更改无法获得最终缓存结果值得更改  \n",
+    "2. **冷数据**: 全量的数据库数据中, 大概只有20%的数据是高频数据, 需要被缓存. 某个数据, 也许1分钟内被频繁修改100次, 但1分钟内却只被查询1次, 这种数据没有必要做缓存; 其次, 只删除缓存不更新缓存的做法也是一种`lazy value`的做法: 数据只有被用到的时候才被计算  \n",
+    "3. **避免缓存和数据库中数据不一致**:  \n",
+    "   如果同时更新缓存和数据库,有可能缓存更新成功, 数据库更新失败, 则导致数据不一致; 如果只删除缓存, 无论数据库更新成功还是失败, 数据都只依照数据库为基准;\n",
+    "\n",
+    "#### 3. 高并发场景下, 缓存+数据库双写不一致问题如何解决?\n",
+    "1. 最初级的缓存不一致及解决方案  \n",
+    "   更新数据时, 先删除缓存再更新数据库\n",
+    "2. 并发场景下的缓存双写不一致  \n",
+    "   上面说到先删除缓存,再更新数据库.在并发量高的多线程场景中, 仍可能出现缓存不一致问题. 如下按照时间顺序描述发生的事情:  \n",
+    "    1. 线程A: 完成了缓存的删除, 还未更新数据库, 此时时间片轮转给了线程B; \n",
+    "    2. 线程B从数据库中读取了一个老值并放回了缓存中, 此后时间片轮转给了线程A;  \n",
+    "    3. 线程A去更新数据库中的值为新值; 造成了数据库和缓存的数据不一致  \n",
+    "    \n",
+    "  如何解决高并发下的数据库双写不一致?   \n",
+    "     1. 在内存中设置500个内存队列, 将每个key计算hash后取余, 找到key所述的内存队列. 即每个key都能路由到一个内存队列中  \n",
+    "     2. 将对同一个key的操作缓存在队列中, 按顺序执行, 就避免了双写不一致  \n",
+    "     (此处有一个优化点, 读请求不必入队列 ,读请求先检查自己所属的队列上是否有写请求了, 若有可以轮训等待一会儿, 超时时间过后若发现队列中还有写操作未完成, 则只查数据库后直接返回)  \n",
+    "     \n",
+    " 这种解决办法适用的场景?  \n",
+    "     1. 这种解决办法适用于写频率不是很高的场景. 因为写频率如果太高, 内存队列中的写积压的很多, 比如积压了100个. 此时来了一个读请求, 需要等这100个写请求完成后才能正常读(如果发生这种情况, 只能横向扩展部署服务的机器, 使每个服务处理的数据减少, 从而让内存队列中积压的操作减少)  \n",
+    "     2. 这种方案, 要在压测后, 找到1s内内存队列上有多少个写请求阻塞了多少读请求  "
+   ]
   }
  ],
  "metadata": {
