--- a/Interview/6.Mysql.ipynb
+++ b/Interview/6.Mysql.ipynb
@@ -155,7 +155,9 @@
     "使用复合索引时, B+树中的key也是符合项, 比如索引`(name, age, sex)` 的时候，B+Tree 是按照从左到右的顺序来建立搜索树的。先用待查记录的name比较, 找到name相同的索引后再比较age, 最后比较sex. 如果查询语句中的条件只有(age,sex), 则因为缺少最左面的name条件, 导致索引全部不可用. 这就是最左匹配原则  \n",
     "    * 比如当 (张三, 20, F) 这样的数据来检索的时候，B+Tree 会优先比较 name 来确定下一步的所搜方向，如果 name 相同再依次比较 age 和 sex ，最后得到检索的数据。\n",
     "    * 但当 (20, F) 这样的没有 name 的数据来的时候，B+Tree 就不知道下一步该查哪个节点，因为建立搜索树的时候 name 就是第一个比较因子，必须要先根据 name 来搜索才能知道下一步去哪里查询。\n",
-    "    * 比如当 (张三, F) 这样的数据来检索时，B+Tree 可以用 name 来指定搜索方向，但下一个字段 age 的缺失，所以只能把名字等于张三的数据都找到，然后再匹配性别是 F 的数据了。"
+    "    * 比如当 (张三, F) 这样的数据来检索时，B+Tree 可以用 name 来指定搜索方向，但下一个字段 age 的缺失，所以只能把名字等于张三的数据都找到，然后再匹配性别是 F 的数据了。\n",
+    "    \n",
+    "* **(附加)优化你的索引-运用Hash以及BitMap? BitMap与BloomFIlter的区别?**   \n"
    ]
   },
   {
@@ -163,8 +165,74 @@
    "metadata": {},
    "source": [
     "### 8. 【重点】请说说 MySQL 的四种事务隔离级别？\n",
+    "* **本地事务的4个级别是什么**\n",
+    "    1. 原子性 Atomicity ：一个事务（transaction）中的所有操作，或者全部完成，或者全部不完成，不会结束在中间某个环节。事务在执行过程中发生错误，会被恢复（Rollback）到事务开始前的状态，就像这个事务从来没有执行过一样。即，事务不可分割、不可约简。\n",
+    "    2. 一致性 Consistency ：在事务开始之前和事务结束以后，数据库的完整性没有被破坏。这表示写入的资料必须完全符合所有的预设约束、触发器)、级联回滚等。\n",
+    "    3. 隔离性 Isolation ：数据库允许多个并发事务同时对其数据进行读写和修改的能力，隔离性可以防止多个事务并发执行时由于交叉执行而导致数据的不一致。事务隔离分为不同级别，包括:\n",
+    "        1. 读未提交（Read uncommitted）、\n",
+    "        2. 读提交（read committed）、\n",
+    "        3. 可重复读（repeatable read）、\n",
+    "        4. 串行化（Serializable）。\n",
+    "    4. 持久性 Durability ：事务处理结束后，对数据的修改就是永久的，即便系统故障也不会丢失。\n",
+    "    \n",
+    "* **并发事务下的3种错误读**   \n",
+    "实际场景下，事务并不是串行的，所以会带来如下三个问题：   \n",
+    "    1. 另一个事务回滚导致的**脏读** : 事务 A 读取了事务 B 更新的数据，然后 B 回滚操作，那么 A 读取到的数据是脏数据。\n",
+    "    2. 另一个事务并发修改导致的**不可重复读** : 事务 A 多次读取同一数据，事务 B 在事务 A 多次读取的过程中，对数据作了更新并提交，导致事务 A 多次读取同一数据时，结果不一致。\n",
+    "    3. 另一个事务增加数据导致的**幻读** : 系统管理员 A 将数据库中所有学生的成绩从具体分数改为 ABCDE 等级，但是系统管理员 B 就在这个时候插入了一条具体分数的记录，当系统管理员 A 改结束后发现还有一条记录没有改过来，就好像发生了幻觉一样，这就叫幻读。 \n",
+    "  ```  \n",
+    "  小结：不可重复读的和幻读很容易混淆，不可重复读侧重于修改，幻读侧重于新增或删除。  \n",
+    "      解决不可重复读的问题只需锁住满足条件的行，解决幻读需要锁表。\n",
+    "  ```\n",
     "\n",
-    "### 9. Innodb 的事务与日志的实现方式\n",
+    "* **Myql事务隔离级别**\n",
+    "\n",
+    "\n",
+    "### 9. 【重点】Mysql的锁机制\n",
+    "* **从读写锁的角度看: 共享锁和排它锁**   \n",
+    "当多个查询同一时刻进行数据修改时，就会产生并发控制的问题。MySQL 的共享锁和排他锁，就是读锁和写锁。   \n",
+    "    * 共享锁：不堵塞，多个用户可以同时读一个资源，互不干扰。\n",
+    "    * 排他锁：一个写锁会阻塞其他的读锁和写锁，这样可以只允许一个用户进行写入，防止其他用户读取正在写入的资源。\n",
+    "\n",
+    "* **从锁粒度的角度看: 锁行和锁表**\n",
+    "    * 表锁：系统开销最小，会锁定整张表，MyIsam 使用表锁。\n",
+    "    * 行锁：最大程度的支持并发处理，但是也带来了最大的锁开销，InnoDB 使用行锁。\n",
+    "\n",
+    "* **悲观锁和乐观锁**\n",
+    "    * 悲观锁 : 数据库的内置锁都是悲观锁(共享锁,排它锁)  \n",
+    "      在悲观锁的情况下，为了保证事务的隔离性，就需要一致性锁定读。读取数据时给加锁，其它事务无法修改这些数据。修改删除数据时也要加锁，其它事务无法读取这些数据。\n",
+    "    * 乐观锁 : 为数据库表增加一个int类型的“version”字段, 实现并发修改下的CAS操作  \n",
+    "        * 读数据时, 将版本号一起读出\n",
+    "        * 修改数据时, 同时将新的字段值和新的版本号更新, 且只有表中的版本号小于这个版本号时才能更新成功,否则认为是过期数据。   \n",
+    "        \n",
+    "    ```sql\n",
+    "    update t_goods   \n",
+    "    set status=2,version=${newVersion}  \n",
+    "    where id=#{id} and version<${newVersion};  \n",
+    "    ```\n",
+    "    \n",
+    "* **什么是死锁**   \n",
+    "多数情况下，可以认为如果一个资源被锁定，它总会在以后某个时间被释放。而死锁发生在当多个进程访问同一数据库时，其中每个进程拥有的锁都是其他进程所需的，由此造成每个进程都无法继续下去。简单的说，进程 A 等待进程 B 释放他的资源，B 又等待 A 释放他的资源，这样就互相等待就形成死锁。死锁的发生必须具备以下四个必要条件：\n",
+    "    * 互斥条件：指进程对所分配到的资源进行排它性使用，即在一段时间内某资源只由一个进程占用。如果此时还有其它进程请求资源，则请求者只能等待，直至占有资源的进程用毕释放。\n",
+    "    * 请求和保持条件：指进程已经保持至少一个资源，但又提出了新的资源请求，而该资源已被其它进程占有，此时请求进程阻塞，但又对自己已获得的其它资源保持不放。\n",
+    "    * 不剥夺条件：指进程已获得的资源，在未使用完之前，不能被剥夺，只能在使用完时由自己释放。\n",
+    "    * 环路等待条件：指在发生死锁时，必然存在一个进程——资源的环形链，即进程集合 {P0，P1，P2，•••，Pn} 中的 P0 正在等待一个 P1 占用的资源；P1 正在等待 P2 占用的资源，……，Pn 正在等待已被 P0 占用的资源。  \n",
+    "    \n",
+    "  下列方法有助于最大限度地降低死锁：\n",
+    "    * 设置获得锁的超时时间。\n",
+    "    ```\n",
+    "    通过超时，至少保证最差最差最差情况下，可以有退出的口子。\n",
+    "    ```\n",
+    "    * 按同一顺序访问对象。\n",
+    "    ```\n",
+    "    这个是最重要的方式。\n",
+    "    ```\n",
+    "    * 避免事务中的用户交互。\n",
+    "    * 保持事务简短并在一个批处理中。\n",
+    "    * 使用低隔离级别。\n",
+    "    * 使用绑定连接。\n",
+    "\n",
+    "### 10. Innodb 的事务与日志的实现方式\n",
     "https://dev.mysql.com/doc/refman/5.7/en/innodb-locking-transaction-model.html"
    ]
   },
@@ -172,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. 【重要】MySQL 查询执行顺序？\n",
+    "### 11. 【重要】MySQL 查询执行顺序？\n",
     "1. RBO谓词下推, 限制性where\n",
     "2. join\n",
     "3. group by\n",
@@ -180,31 +248,46 @@
     "5. order by\n",
     "6. limit \n",
     "\n",
-    "### 11. 【重要】聊聊 MySQL SQL 优化？\n",
-    "1. 如果使用了索引, 索引字段的where条件要满足[MySQL 索引的“使用”注意事项？](#id1)\n",
-    "2. 用exist代替in, 或用join代替in\n",
-    "3. 尽量使用数字类型的字段  \n",
-    "   若只含数值信息的字段尽量不要设计为字符型，这会降低查询和连接的性能，并会增加存储开销。这是因为引擎在处理查询和连接时会逐个比较字符串中每一个字符，而对于数字型而言只需要比较一次就够了。"
+    "### 12. 【重要】聊聊 MySQL SQL 优化？\n",
+    "* **叙述几种优化手段?**\n",
+    "    1. 如果使用了索引, 索引字段的where条件要满足[MySQL 索引的“使用”注意事项？](#id1)\n",
+    "    2. 用exist代替in, 或用join代替in\n",
+    "    3. 尽量使用数字类型的字段  \n",
+    "       若只含数值信息的字段尽量不要设计为字符型，这会降低查询和连接的性能，并会增加存储开销。这是因为引擎在处理查询和连接时会逐个比较字符串中每一个字符，而对于数字型而言只需要比较一次就够了。\n",
+    "   \n",
+    "* **MySQL 数据库 CPU 飙升到 500% 的话，怎么处理？**\n",
+    "\n",
+    "* **在 MySQL 服务器运行缓慢的情况下输入什么命令能缓解服务器压力？**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  12.【加分】什么是 MVCC ？"
+    "###  13.【加分】什么是 MVCC ？"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### 13. MySQL binlog 的几种日志录入格式以及区别\n",
+    "### 14. MySQL binlog 的几种日志录入格式以及区别\n",
+    "* **Mysql一共有几中日志 ?**   \n",
     "https://dev.mysql.com/doc/refman/5.7/en/binary-log.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 15. MySQL 主从复制的流程是怎么样的？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16. 聊聊 MySQL 备份方式？备份策略是怎么样的？"
    ]
   },
   {
